# interface/rest_api.py
@@ -1,6 +1,14 @@
 from interface.db_api import Loader
 import json
 import numpy as np
+from sklearn.tree import DecisionTreeRegressor
+import pandas as pd
+import joblib
+from pathlib import Path
+
+MODEL = None
+if Path('model.joblib').is_file():
+    MODEL = joblib.load('model.joblib')
 
 
 def predict(answers):
@@ -40,3 +48,14 @@ def upload_table(upfile, table_name):
         raise KeyError(f'Undefined table {table_name}')
     loader = Loader()
     loader.post_tabel_by_xls(upfile, table_name)
+
+
+def fit(upfile, out_name):
+    data = pd.read_excel(upfile)
+    print(data.columns)
+    in_val = data.loc[:, data.columns != out_name].values
+    out_val = data[out_name].values.reshape(-1, 1)
+    model = DecisionTreeRegressor()
+    model.fit(in_val, out_val)
+    # bin_model = pickle.dumps(model)
+    joblib.dump(model, './{}.joblib'.format('model'))
