# interface/swagger_admin.yml
@@ -55,6 +55,30 @@ paths:
           200:
             description: Upload successfully made.
 
+  /fit:
+    put:
+      operationId: interface.rest_api.fit
+      tags:
+        - fit
+      summary: Upload Table in DB.
+      parameters:
+        - name: upfile
+          in: formData
+          type: file
+          description: example.xlsx
+          required: True
+
+        - name: out_name
+          in: query
+          description: target column name
+          default: 'out_val'
+          type: string
+          required: True
+
+      responses:
+        200:
+          description: Upload successfully made.
+
 definitions:
   predict_query:
       type: array
